			wxFormBuilder ChangeLog
********************************************************************************
02/23/2010 Version 3.01.68 (Beta)
+ Generation of inherited class (F6) preserves all user code changes now (so it can be used
  more than once) (spedgenius)
* FS#456 - App crashes when you double click on file_path property

02/10/2010 Version 3.01.67 (Beta)
* Fixed resolving of name conflicts in stand-alone toolbars and menubars.
^ Context menus are now generated as top-level menus in XRC so function wxXmlResource::LoadMenu()
  can be used on them.
^ Implemented XRC preview (F5) for stand-alone MenuBar and ToolBar.
* FS#454 - Python code generation for toolbars
* Fixed Python code generation of SetToolTipString() function for wxPanel

12/17/2009 Version 3.01.66 (Beta)
* Fixed python code generation for wx.EVT_LIST_ITEM_DESELECTED event (wxListCtrl).
* FS#420 - Minsize field is not generated.
* FS#447 - Python code generation for ToolBar.
* FS#449 - Python code generation for Menu: wrong id in Bind.
* Fixed crash occured when non-top level window was added directly to the project.

08/27/2009 Version 3.01.65 (Beta)
* Fixed menu items' shortcuts in XRC
+ Implemented context menus for forms, containers and widgets. An instance
  of wxMenu class can be now assigned directly to these objects. The context menu
  is displayed on a right-mouse-button click by default, but the behaviour can be
  changed by "context_menu" widget's option. Note that this feature is supported
  in C++ and Python code generation only.
* FS#280 - wxMenu not part of a wxMenuBar 
* Fixed startup crash on MacOS X 10.5.7 (for wxWidgets 2.8.10)
* Fixed loading of wxTreeListCtrl events that were inherited from wxTreeCtrl in 
  wxAdditions.
* FS#444 - python code generation error
* FS#428 - extra import(s) in wxpython code generation
* FS#446 - Can't add Submenu to a Menu
+ Menubar and toolbar can be inserted into project as top-level objects (they will