@@ -219,6 +219,7 @@ private:
 	* the template is found, and the objectbase for the control.
 	*/
 	void GenAddToolbar( PObjectInfo info, PObjectBase obj );
+	void GetAddToolbarCode( PObjectInfo info, PObjectBase obj, wxArrayString& codelines );
 
 	void GenPrivateEventHandlers(const EventVector &events);
 
